build/log/idf_py_stdout_output_50596
[1/10] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D D:\Baitap\work\firmware\Screen_test\Test_screen\build\bootloader\esp-idf\esptool_py && D:\ESP_IDF_5_4_2\python_env\idf5.4_py3.11_env\Scripts\python.exe D:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/Baitap/work/firmware/Screen_test/Test_screen/build/bootloader/bootloader.bin"
Bootloader binary size 0x6570 bytes. 0xa90 bytes (9%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache D:\ESP_IDF_5_4_2\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.4.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/Baitap/work/firmware/Screen_test/Test_screen/build/config -ID:/Baitap/work/firmware/Screen_test/Test_screen/main -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/newlib/platform_include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/freertos/config/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/freertos/config/include/freertos -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/freertos/config/xtensa/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/freertos/FreeRTOS-Kernel/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/freertos/esp_additions/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_hw_support/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_hw_support/include/soc -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_hw_support/include/soc/esp32 -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_hw_support/dma/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_hw_support/ldo/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_hw_support/debug_probe/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_hw_support/port/esp32/. -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_hw_support/port/esp32/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/heap/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/heap/tlsf -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/log/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/soc/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/soc/esp32 -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/soc/esp32/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/soc/esp32/register -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/hal/platform_port/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/hal/esp32/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/hal/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_rom/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_rom/esp32/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_rom/esp32/include/esp32 -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_rom/esp32 -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_common/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_system/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_system/port/soc -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_system/port/include/private -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/xtensa/esp32/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/xtensa/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/xtensa/deprecated_include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/lwip/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/lwip/include/apps -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/lwip/include/apps/sntp -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/lwip/lwip/src/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/lwip/port/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/lwip/port/freertos/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/lwip/port/esp32xx/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/lwip/port/esp32xx/include/arch -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/lwip/port/esp32xx/include/sys -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_lcd/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_lcd/interface -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/driver/deprecated -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/driver/i2c/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/driver/touch_sensor/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/driver/twai/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/driver/touch_sensor/esp32/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_pm/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_ringbuf/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_driver_gpio/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_driver_pcnt/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_driver_gptimer/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_driver_spi/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_driver_mcpwm/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_driver_ana_cmpr/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_driver_i2s/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_driver_sdmmc/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/sdmmc/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_driver_sdspi/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_driver_sdio/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_driver_dac/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_driver_rmt/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_driver_tsens/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_driver_sdm/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_driver_i2c/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_driver_uart/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/vfs/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_driver_ledc/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_driver_parlio/include -ID:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_driver_usb_serial_jtag/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/Baitap/work/firmware/Screen_test/Test_screen=. -fmacro-prefix-map=D:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c D:/Baitap/work/firmware/Screen_test/Test_screen/main/main.c
D:/Baitap/work/firmware/Screen_test/Test_screen/main/main.c:65:73: warning: excess elements in array initializer
   65 |         {0x00, 0x41, 0x36, 0x08, 0x00}, {0x10, 0x08, 0x08, 0x10, 0x08}, {0x78, 0x46, 0x41, 0x46, 0x78}
      |                                                                         ^
D:/Baitap/work/firmware/Screen_test/Test_screen/main/main.c:65:73: note: (near initialization for 'font5x7')
In file included from D:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_driver_gpio/include/driver/gpio.h:12,
                 from D:/Baitap/work/firmware/Screen_test/Test_screen/main/main.c:1:
D:/Baitap/work/firmware/Screen_test/Test_screen/main/main.c: In function 'app_main':
D:/Baitap/work/firmware/Screen_test/Test_screen/main/main.c:154:25: error: implicit declaration of function 'esp_lcd_new_panel_ili9341'; did you mean 'esp_lcd_new_panel_ssd1306'? [-Wimplicit-function-declaration]
  154 |         ESP_ERROR_CHECK(esp_lcd_new_panel_ili9341(io_handle, &panel_config, &panel_handle));
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~
D:/ESP_IDF_5_4_2/frameworks/esp-idf-v5.4.2/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
ninja: build stopped: subcommand failed.
